# pioneer-gazebo

./: CMakeLists.txt  README.md
pioneer/: model.config  model.config.save  pioneer.sdf
plugin/: CMakeLists.txt
plugin/src/: control_plugin.cc  vel_publisher.cpp
src/: vel_publisher.cpp
worlds/: pioneer.world
